--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blockchain Art Cert</title>
     <link rel="stylesheet" href="./style.css">
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script defer type="module" src="./script.js"></script>
 </head>
 <body>
     <header>
@@ -57,7 +59,7 @@
         <!-- Show blockchain -->
         <section class="block">
             <h2>Show Blockchain</h2>
-            <div class="box"></div>
+            <pre id="blockchain-box" class="box blockchain-box"></pre>
         </section>
 
         <!-- Check current owner -->
