feat(checkOwner): Add blockchain method,  endpoint, script for handle check owner by ID feature

--- a/client/index.html
+++ b/client/index.html
@@ -70,7 +70,7 @@
                     <label for="checkArtId">Art Id</label>
                     <div class="row">
                         <input id="checkArtId" type="text" required placeholder="Put Art Id...">
-                        <button id="checkBtn" class="button">Check</button>
+                        <button id="checkOwnerBtn" class="button">Check</button>
                     </div>
                 </div>
                 <hr>
