feat(detail): change label text, add alert error message for transferring, change timestamp to ISO string, fix responsive

--- a/client/index.html
+++ b/client/index.html
@@ -40,8 +40,8 @@
             <h2>Transfer owner</h2>
             <div class="box">
                 <div class="input-box">
-                    <label for="artId">Art Id</label>
-                    <input id="artId" type="text" required placeholder="Put Art Id of art work...">
+                    <label for="artId">Art ID</label>
+                    <input id="artId" type="text" required placeholder="Put Art ID of art work...">
                 </div>
                 <div class="input-box">
                     <label for="previousOwner">Previous Owner</label>
@@ -67,9 +67,9 @@
             <h2>Check the current owner</h2>
             <div class="box">
                 <div class="input-box">
-                    <label for="checkArtId">Art Id</label>
+                    <label for="checkArtId">Art ID</label>
                     <div class="row">
-                        <input id="checkArtId" type="text" required placeholder="Put Art Id...">
+                        <input id="checkArtId" type="text" required placeholder="Put Art ID...">
                         <button id="checkOwnerBtn" class="button">Check</button>
                     </div>
                 </div>
